--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0016.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0016.html
@@ -283,17 +283,11 @@
         </span>
         <span id="w_48" class="ocr_word" title="bbox 2078 469 2151 509">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ap-</ins>
+            <ins title="nlp 2.00">apparet.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 329 535 2151 596">
-        <span id="w_49" class="ocr_word" title="bbox 329 546 465 596">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">paret.</ins>
-            <del title="nlp 0.90">apparet.</del>
-          </span>
-        </span>
         <span id="w_50" class="ocr_word" title="bbox 530 539 804 582">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">scholiastam</ins>
@@ -815,17 +809,11 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 2021 1179 2149 1221">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inter-</ins>
+            <ins title="nlp 2.00">interpretationum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 331 1256 2147 1313">
-        <span id="w_138" class="ocr_word" title="bbox 331 1258 617 1313">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pretationum</ins>
-            <del title="nlp 0.90">interpretationum</del>
-          </span>
-        </span>
         <span id="w_139" class="ocr_word" title="bbox 656 1259 716 1312">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(p.</ins>
@@ -1139,17 +1127,11 @@
         </span>
         <span id="w_190" class="ocr_word" title="bbox 2040 1594 2148 1621">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sum-</ins>
+            <ins title="nlp 2.00">summam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 328 1655 1609 1711">
-        <span id="w_191" class="ocr_word" title="bbox 328 1669 440 1697">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mam</ins>
-            <del title="nlp 0.90">summam</del>
-          </span>
-        </span>
         <span id="w_192" class="ocr_word" title="bbox 473 1657 661 1710">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">capitum</ins>
@@ -1572,17 +1554,11 @@
         </span>
         <span id="w_260" class="ocr_word" title="bbox 2019 2153 2149 2195">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">maxi-</ins>
+            <ins title="nlp 2.00">maximque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 333 2226 2149 2287">
-        <span id="w_261" class="ocr_word" title="bbox 333 2239 485 2279">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">meque</ins>
-            <del title="nlp 0.90">maximeque</del>
-          </span>
-        </span>
         <span id="w_262" class="ocr_word" title="bbox 518 2226 730 2267">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">lacunosis</ins>
@@ -1689,17 +1665,11 @@
         </span>
         <span id="w_279" class="ocr_word" title="bbox 2078 2328 2149 2369">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ap-</ins>
+            <ins title="nlp 2.00">apparet</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 331 2387 2148 2448">
-        <span id="w_280" class="ocr_word" title="bbox 331 2392 455 2440">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">paret</ins>
-            <del title="nlp 0.90">apparet</del>
-          </span>
-        </span>
         <span id="w_281" class="ocr_word" title="bbox 486 2400 538 2428">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ex</ins>
@@ -1812,26 +1782,20 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_300" class="ocr_word" title="bbox 1543 2472 1612 2513">
+        <span id="w_300_0" class="ocr_word" title="bbox 1543 2472 1612 2513">
           <span class="alternatives">
-            <ins title="nlp 2.00">91r–92v</ins>
+            <ins class="alt" title="nlp 2.00">91r—92v</ins>
+          </span>
+        </span>
+        <span id="w_300_1" class="ocr_word" title="bbox 1543 2472 1612 2513">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1795 2478 1837 2515">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">et</ins>
             <del title="nlp 0.90">et</del>
-          </span>
-        </span>
-        <span id="w_304" class="ocr_word" title="bbox 1872 2475 1898 2515">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">f.</ins>
-            <del title="nlp 0.90">f.</del>
-          </span>
-        </span>
-        <span id="w_305" class="ocr_word" title="bbox 1921 2474 1991 2517">
-          <span class="alternatives">
-            <ins title="nlp 2.00">95r–96v</ins>
           </span>
         </span>
       </span>
@@ -1959,8 +1923,7 @@
       <span class="ocr_line" title="bbox 197 2703 2147 2762">
         <span id="w_329" class="ocr_word" title="bbox 197 2703 303 2746">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’C’</ins>
-            <del title="nlp 0.90">’C’</del>
+            <ins title="nlp 2.00">CaCb</ins>
           </span>
         </span>
         <span id="w_330" class="ocr_word" title="bbox 331 2704 473 2746">
@@ -2296,12 +2259,7 @@
         </span>
         <span id="w_385" class="ocr_word" title="bbox 1826 3033 1952 3074">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">92.32</ins>
-          </span>
-        </span>
-        <span id="w_386" class="ocr_word" title="bbox 1966 3049 1974 3087">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">92.32;</ins>
           </span>
         </span>
         <span id="w_387" class="ocr_word" title="bbox 2007 3034 2145 3075">
