--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0104.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0104.html
@@ -551,9 +551,9 @@
             <ins title="nlp 1.00" class="alt">ἄν</ins>
           </span>
         </span>
-        <span title="bbox 2111 747 2162 783" class="ocr_word" id="w_105">
+        <span id="w_105_0" class="ocr_word" title="bbox 2111 747 2162 783">
           <span class="alternatives">
-            <ins title="nlp 2.00">71ν</ins>
+            <ins class="alt" title="nlp 2.00">71v</ins>
           </span>
         </span>
       </span>
