--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0059.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0059.html
@@ -517,7 +517,7 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 1592 763 1698 817" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τότε</ins>
+            <ins title="nlp 2.00">(τότε</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1728 763 1798 817" lang="grc">
