--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0105.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0105.html
@@ -187,16 +187,11 @@
         </span>
         <span id="w_33" class="ocr_word" title="bbox 1730 429 1838 467" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποιή-</ins>
+            <ins title="nlp 2.00">ποιήσωμεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 156 485 1838 540">
-        <span id="w_34" class="ocr_word" title="bbox 156 500 285 526" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σωμεν</ins>
-          </span>
-        </span>
         <span id="w_35" class="ocr_word" title="bbox 318 488 380 526" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -450,7 +445,7 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1841 702 1902 737">
           <span class="alternatives">
-            <ins title="nlp 2.00">72ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1438,19 +1433,19 @@
             <ins class="alt" title="nlp 1.00">ζῴου,</ins>
           </span>
         </span>
-        <span id="w_278" class="ocr_word" title="bbox 1538 2293 1626 2349">
+        <span id="w_278_0" class="ocr_word" title="bbox 1538 2293 1626 2349">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ὡς&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_278_1" class="ocr_word" title="bbox 1538 2293 1626 2349">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_279" class="ocr_word" title="bbox 1660 2295 1718 2335" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἵνα</ins>
-          </span>
-        </span>
-        <span id="w_280" class="ocr_word" title="bbox 1739 2311 1852 2336" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἴπωμεν</ins>
           </span>
         </span>
       </span>
@@ -1774,9 +1769,14 @@
             <ins title="nlp 2.00">ἀδιωργάνωτον</ins>
           </span>
         </span>
-        <span id="w_344" class="ocr_word" title="bbox 837 2709 871 2751" lang="grc">
+        <span id="w_344_0" class="ocr_word" title="bbox 837 2709 871 2751">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀ</ins>
+            <ins class="alt" title="nlp 2.00">(ἀ</ins>
+          </span>
+        </span>
+        <span id="w_344_1" class="ocr_word" title="bbox 837 2709 871 2751">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 897 2713 1080 2753">
@@ -1804,12 +1804,6 @@
         <span id="w_349" class="ocr_word" title="bbox 1533 2711 1797 2756" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">διοργανωμένον</ins>
-          </span>
-        </span>
-        <span id="w_350" class="ocr_word" title="bbox 1819 2711 1878 2745">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">CV</ins>
-            <del title="nlp 0.90">CV</del>
           </span>
         </span>
       </span>
@@ -2095,9 +2089,14 @@
             <ins title="nlp 2.00">ἀναισθητὸν</ins>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 950 2945 1001 2986" lang="grc">
+        <span id="w_401_0" class="ocr_word" title="bbox 950 2945 1001 2986">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀν</ins>
+            <ins class="alt" title="nlp 2.00">(ἀν</ins>
+          </span>
+        </span>
+        <span id="w_401_1" class="ocr_word" title="bbox 950 2945 1001 2986">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1018 2945 1098 2986">
@@ -2130,11 +2129,6 @@
         <span id="w_407" class="ocr_word" title="bbox 1664 2946 1821 2991" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀκίνητον</ins>
-          </span>
-        </span>
-        <span id="w_408" class="ocr_word" title="bbox 1850 2946 1875 2980">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">0</ins>
           </span>
         </span>
       </span>
