--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0060.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0060.html
@@ -790,7 +790,7 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1923 981 1992 1036" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
+            <ins title="nlp 2.00">(διὰ</ins>
           </span>
         </span>
         <span id="w_154" class="ocr_word" title="bbox 2010 982 2079 1036" lang="grc">
@@ -1817,7 +1817,7 @@
         </span>
         <span id="w_353" class="ocr_word" title="bbox 979 2545 1087 2599" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
+            <ins title="nlp 2.00">(οὐδὲ</ins>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 1117 2545 1189 2600" lang="grc">
