--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0017.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0017.html
@@ -268,8 +268,7 @@
         </span>
         <span title="bbox 1323 513 1373 554" class="ocr_word" id="w_44">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">Ca</ins>
           </span>
         </span>
         <span title="bbox 1413 514 1544 556" class="ocr_word" id="w_45">
@@ -325,8 +324,7 @@
         </span>
         <span title="bbox 898 597 947 639" class="ocr_word" id="w_54">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">Ca</ins>
           </span>
         </span>
         <span title="bbox 983 596 1108 646" class="ocr_word" id="w_55">
@@ -471,17 +469,11 @@
         </span>
         <span title="bbox 1814 766 1908 794" class="ocr_word" id="w_78">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">eon-</ins>
+            <ins title="nlp 2.00">consonantes</ins>
           </span>
         </span>
       </span>
       <span title="bbox 94 833 1909 894" class="ocr_line">
-        <span title="bbox 94 845 298 884" class="ocr_word" id="w_79">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">sonantes</ins>
-            <del title="nlp 0.90">eonsonantes</del>
-          </span>
-        </span>
         <span title="bbox 343 852 545 894" class="ocr_word" id="w_80">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">perverse</ins>
@@ -836,21 +828,14 @@
         </span>
         <span title="bbox 1826 1244 1913 1271" class="ocr_word" id="w_138">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">cor-</ins>
+            <ins title="nlp 2.00">corrector</ins>
           </span>
         </span>
       </span>
       <span title="bbox 98 1310 1913 1372" class="ocr_line">
-        <span title="bbox 272 1323 405 1363" class="ocr_word" id="w_139">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">latum</ins>
-            <del title="nlp 0.90">corlatum</del>
-          </span>
-        </span>
         <span title="bbox 443 1319 632 1361" class="ocr_word" id="w_140">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">babebat</ins>
-            <del title="nlp 0.90">babebat</del>
+            <ins title="nlp 2.00">latum habebat</ins>
           </span>
         </span>
         <span title="bbox 671 1331 880 1372" class="ocr_word" id="w_141">
@@ -1200,17 +1185,11 @@
         </span>
         <span title="bbox 1831 1717 1914 1745" class="ocr_word" id="w_197">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">me-</ins>
+            <ins title="nlp 2.00">memoriam</ins>
           </span>
         </span>
       </span>
       <span title="bbox 104 1783 1913 1848" class="ocr_line">
-        <span title="bbox 104 1801 277 1844" class="ocr_word" id="w_198">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">moriam</ins>
-            <del title="nlp 0.90">memoriam</del>
-          </span>
-        </span>
         <span title="bbox 311 1799 588 1842" class="ocr_word" id="w_199">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">reddiderunt</ins>
@@ -1795,7 +1774,7 @@
         </span>
         <span title="bbox 1856 2527 1924 2554" class="ocr_word" id="w_295">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">ex-</ins>
+            <ins title="nlp 2.00">exhibentur</ins>
           </span>
         </span>
         <span title="bbox 1956 2513 1986 2552" class="ocr_word" id="w_296">
@@ -1806,12 +1785,6 @@
         </span>
       </span>
       <span title="bbox 113 2592 1921 2659" class="ocr_line">
-        <span title="bbox 113 2605 310 2647" class="ocr_word" id="w_297">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">hibentur</ins>
-            <del title="nlp 0.90">hibentur</del>
-          </span>
-        </span>
         <span title="bbox 330 2605 638 2659" class="ocr_word" id="w_298">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">prolegomena</ins>
@@ -1938,13 +1911,7 @@
         </span>
         <span title="bbox 468 2778 507 2817" class="ocr_word" id="w_318">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">p.</ins>
-            <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 532 2761 845 2817" class="ocr_word" id="w_319">
-          <span class="alternatives">
-            <ins title="nlp 2.00">26,19–27,34</ins>
+            <ins title="nlp 2.00">p. 26,19—27,34</ins>
           </span>
         </span>
         <span title="bbox 881 2758 1132 2813" class="ocr_word" id="w_320">
@@ -1973,17 +1940,11 @@
         </span>
         <span title="bbox 1820 2750 1923 2791" class="ocr_word" id="w_324">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">divi-</ins>
+            <ins title="nlp 2.00">divinando</ins>
           </span>
         </span>
       </span>
       <span title="bbox 114 2830 1923 2893" class="ocr_line">
-        <span title="bbox 114 2844 254 2886" class="ocr_word" id="w_325">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">nando</ins>
-            <del title="nlp 0.90">divinando</del>
-          </span>
-        </span>
         <span title="bbox 287 2844 404 2885" class="ocr_word" id="w_326">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">ilium</ins>
@@ -2259,46 +2220,7 @@
       <span title="bbox 119 3232 1926 3300" class="ocr_line" id="w_382">
         <span title="bbox 119 3243 176 3298" class="ocr_word" id="w_372">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">(p.</ins>
-            <del title="nlp 0.90">(p.</del>
-          </span>
-        </span>
-        <span title="bbox 198 3245 522 3300" class="ocr_word" id="w_373">
-          <span class="alternatives">
-            <ins title="nlp 2.00">60,24–64,29;</ins>
-          </span>
-        </span>
-        <span title="bbox 546 3259 584 3298" class="ocr_word" id="w_374">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">p.</ins>
-            <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 608 3243 908 3297" class="ocr_word" id="w_375">
-          <span class="alternatives">
-            <ins title="nlp 2.00">75,5–76,23;</ins>
-          </span>
-        </span>
-        <span title="bbox 930 3257 968 3296" class="ocr_word" id="w_376">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">p.</ins>
-            <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span title="bbox 991 3238 1319 3294" class="ocr_word" id="w_377">
-          <span class="alternatives">
-            <ins title="nlp 2.00">92,19–95;</ins>
-          </span>
-        </span>
-        <span title="bbox 1343 3252 1381 3292" class="ocr_word" id="w_378">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">p.</ins>
-            <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span title="bbox 1402 3236 1610 3290" class="ocr_word" id="w_379">
-          <span class="alternatives">
-            <ins title="nlp 2.00">100,28–104,12)</ins>
+            <ins title="nlp 2.00">(p. 60,24—64,29; p. 75,5—76,23; p. 92,19—95,34; p. 100,28—104,12) inter-</ins>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1801 3232 1926 3275">
