--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0061.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0061.html
@@ -695,7 +695,7 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1697 1057 1728 1079">
           <span class="alternatives">
-            <ins title="nlp 2.00">ω&amp;#x772;</ins>
+            <ins title="nlp 2.00">#x772;</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1762 1054 1873 1093" lang="grc">
@@ -2523,9 +2523,9 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_488" class="ocr_word" title="bbox 1818 2988 1952 3029" lang="grc">
+        <span id="w_488_0" class="ocr_word" title="bbox 1818 2988 1952 3029">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ὂντως&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὄντως&amp;#x003Ε;</ins>
           </span>
         </span>
       </span>
