--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0106.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0106.html
@@ -46,7 +46,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1526 151 1557 183">
           <span class="alternatives">
-            <ins title="nlp 2.00">4,21—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1579 139 1702 174" lang="grc">
@@ -757,9 +757,14 @@
             <ins title="nlp 2.00">ζῷον</ins>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 560 949 612 1002" lang="grc">
+        <span id="w_147_0" class="ocr_word" title="bbox 560 949 612 1002">
           <span class="alternatives">
-            <ins title="nlp 2.00">(εἰ</ins>
+            <ins class="alt" title="nlp 2.00">(εἰ</ins>
+          </span>
+        </span>
+        <span id="w_147_1" class="ocr_word" title="bbox 560 949 612 1002">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 643 963 714 1002" lang="grc">
@@ -815,11 +820,6 @@
         <span id="w_158" class="ocr_word" title="bbox 1766 946 1829 986" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_159" class="ocr_word" title="bbox 1859 945 2115 1000" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εὑρεθήσεται</ins>
           </span>
         </span>
       </span>
@@ -881,17 +881,21 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1133 1215 1419 1275">
-        <span id="w_171" class="ocr_word" title="bbox 1133 1218 1294 1274" lang="grc">
+        <span id="w_171_0" class="ocr_word" title="bbox 1133 1218 1294 1274">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις κγ΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_171_1" class="ocr_word" title="bbox 1133 1218 1294 1274">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κγ'&amp;x003E;.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 428 1357 2114 1415">
         <span id="w_173" class="ocr_word" title="bbox 428 1381 462 1415">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IJ.</ins>
-            <del title="nlp 0.90">IJ.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 477 1370 553 1411">
@@ -1183,8 +1187,7 @@
         </span>
         <span id="w_229" class="ocr_word" title="bbox 426 1926 458 1958">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 475 1915 553 1957">
@@ -1411,9 +1414,9 @@
             <ins class="alt" title="nlp 1.00">σχέσιν</ins>
           </span>
         </span>
-        <span id="w_274" class="ocr_word" title="bbox 1983 2348 2109 2404" lang="grc">
+        <span id="w_274_0" class="ocr_word" title="bbox 1983 2348 2109 2404">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γένος</ins>
+            <ins class="alt" title="nlp 2.00">(γένος</ins>
           </span>
         </span>
       </span>
