--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0062.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0062.html
@@ -244,7 +244,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1389 424 1507 477" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατὰ</ins>
+            <ins title="nlp 2.00">(κατὰ</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 1544 439 1615 478" lang="grc">
@@ -457,7 +457,7 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 833 701 970 755" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄλλος</ins>
+            <ins title="nlp 2.00">(ἄλλος</ins>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 1000 702 1071 756" lang="grc">
@@ -2335,7 +2335,7 @@
         </span>
         <span id="w_446" class="ocr_word" title="bbox 467 2887 661 2934" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;δηλοούσης&amp;x003E;</ins>
+            <ins title="nlp 2.00">x003E;</ins>
           </span>
         </span>
         <span id="w_447" class="ocr_word" title="bbox 686 2900 814 2922" lang="grc">
