--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0063.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0063.html
@@ -1129,8 +1129,7 @@
       <span class="ocr_line" title="bbox 227 1488 431 1542">
         <span id="w_216" class="ocr_word" title="bbox 401 1490 405 1540">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 427 1532 431 1538">
@@ -2156,7 +2155,7 @@
         </span>
         <span id="w_419" class="ocr_word" title="bbox 1707 2859 1747 2891" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 εἰ] ἡ Ρ</ins>
+            <ins title="nlp 2.00">εἰ] ἡ Ρ</ins>
           </span>
         </span>
       </span>
