--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0018.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0018.html
@@ -105,8 +105,7 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 898 311 1123 353">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">verlxtriim</ins>
-            <del title="nlp 0.90">verlxtriim</del>
+            <ins title="nlp 2.00">verborum</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 1163 313 1411 351">
@@ -137,8 +136,7 @@
       <span class="ocr_line" title="bbox 278 381 2162 452">
         <span id="w_20" class="ocr_word" title="bbox 278 398 517 452">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’saepius</ins>
-            <del title="nlp 0.90">’saepius</del>
+            <ins title="nlp 2.00">V2 saepius</ins>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 565 394 809 449">
@@ -291,9 +289,14 @@
             <del title="nlp 0.90">(p.</del>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 438 634 664 687">
+        <span id="w_45_0" class="ocr_word" title="bbox 438 634 664 687">
           <span class="alternatives">
-            <ins title="nlp 2.00">1–39,33)</ins>
+            <ins class="alt" title="nlp 2.00">1—39,33)</ins>
+          </span>
+        </span>
+        <span id="w_45_1" class="ocr_word" title="bbox 438 634 664 687">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 701 633 741 673">
@@ -332,20 +335,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1637 624 1886 675" lang="grc">
+        <span id="w_52_0" class="ocr_word" title="bbox 1637 624 1886 675">
           <span class="alternatives">
-            <ins title="nlp 2.00">389–433,</ins>
+            <ins class="alt" title="nlp 2.00">389—433,</ins>
           </span>
         </span>
-        <span id="w_53" class="ocr_word" title="bbox 1925 620 2044 663">
+        <span id="w_52_1" class="ocr_word" title="bbox 1637 624 1886 675">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cuius</ins>
-            <del title="nlp 0.90">cuius</del>
-          </span>
-        </span>
-        <span id="w_54" class="ocr_word" title="bbox 2080 618 2165 662">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">edi-</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -354,12 +351,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">c</ins>
             <del title="nlp 0.90">edic</del>
-          </span>
-        </span>
-        <span id="w_56" class="ocr_word" title="bbox 347 716 472 757">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tiuuis</ins>
-            <del title="nlp 0.90">tiuuis</del>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 504 712 817 767">
@@ -566,9 +557,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 413 954 575 996">
+        <span id="w_90_0" class="ocr_word" title="bbox 413 954 575 996">
           <span class="alternatives">
-            <ins title="nlp 2.00">6a22–9b34</ins>
+            <ins class="alt" title="nlp 2.00">6a22—9b34</ins>
+          </span>
+        </span>
+        <span id="w_90_1" class="ocr_word" title="bbox 413 954 575 996">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_92" class="ocr_word" title="bbox 737 954 940 1003">
@@ -605,12 +601,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">codex</ins>
             <del title="nlp 0.90">codex</del>
-          </span>
-        </span>
-        <span id="w_98" class="ocr_word" title="bbox 2132 941 2165 981">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
           </span>
         </span>
       </span>
@@ -779,17 +769,11 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 2097 1261 2168 1302">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">do-</ins>
+            <ins title="nlp 2.00">docemur.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 351 1341 2167 1405">
-        <span id="w_126" class="ocr_word" title="bbox 351 1367 506 1396">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cemur.</ins>
-            <del title="nlp 0.90">docemur.</del>
-          </span>
-        </span>
         <span id="w_127" class="ocr_word" title="bbox 574 1367 623 1393">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ex</ins>
@@ -960,8 +944,7 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 2020 1503 2169 1557">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Oscupta</ins>
-            <del title="nlp 0.90">Oscupta</del>
+            <ins title="nlp 2.00">θεωρία</ins>
           </span>
         </span>
       </span>
@@ -1028,17 +1011,11 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 2017 1595 2170 1625">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">evane-</ins>
+            <ins title="nlp 2.00">evennescerent.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 351 1663 2168 1723">
-        <span id="w_168" class="ocr_word" title="bbox 351 1677 530 1716">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scerent.</ins>
-            <del title="nlp 0.90">evanescerent.</del>
-          </span>
-        </span>
         <span id="w_169" class="ocr_word" title="bbox 572 1670 927 1723">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">interpolationes</ins>
@@ -1781,7 +1758,7 @@
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1563 2625 1690 2681">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Η)1),</ins>
+            <ins title="nlp 2.00">Η)1),</ins>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1708 2626 1962 2669">
@@ -1918,17 +1895,11 @@
         </span>
         <span id="w_312" class="ocr_word" title="bbox 2058 2790 2173 2826">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ante-</ins>
+            <ins title="nlp 2.00">antecedere</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 359 2863 2173 2919">
-        <span id="w_313" class="ocr_word" title="bbox 359 2866 509 2907">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cedere</ins>
-            <del title="nlp 0.90">antecedere</del>
-          </span>
-        </span>
         <span id="w_314" class="ocr_word" title="bbox 547 2865 722 2918">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quaevis</ins>
