--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0064.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0064.html
@@ -391,7 +391,7 @@
         </span>
         <span id="w_72_1" class="ocr_word" title="bbox 379 733 516 760">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(σοφίαν</ins>
+            <ins class="alt" title="nlp 2.00">σοφίαν</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 734 731 953 757" lang="grc">
@@ -505,7 +505,7 @@
       <span class="ocr_line" title="bbox 380 849 2061 910">
         <span id="w_95" class="ocr_word" title="bbox 380 858 584 910" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μάστιγος</ins>
+            <ins title="nlp 2.00">(μάστιγος</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 616 871 697 909" lang="grc">
@@ -2122,7 +2122,7 @@
         </span>
         <span id="w_406" class="ocr_word" title="bbox 1275 2672 1324 2711">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;τε</ins>
+            <ins title="nlp 2.00">τε</ins>
           </span>
         </span>
         <span id="w_407" class="ocr_word" title="bbox 1342 2671 1399 2704" lang="grc">
@@ -2132,7 +2132,7 @@
         </span>
         <span id="w_408" class="ocr_word" title="bbox 1419 2670 1613 2716" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">σκοτώδη&amp;x003E;?</ins>
+            <ins title="nlp 2.00">x003E;?</ins>
           </span>
         </span>
         <span id="w_409" class="ocr_word" title="bbox 1639 2671 1695 2712">
